<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>EDIIConnectionFailedDialog</class>
 <widget class="QDialog" name="EDIIConnectionFailedDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>219</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>EDII connection error</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QLabel" name="ql_icon">
       <property name="text">
        <string>&lt;ICON&gt;</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="ql_caption">
       <property name="font">
        <font>
         <pointsize>16</pointsize>
        </font>
       </property>
       <property name="text">
        <string>&quot;Is there anybody out there, anybody out there just like me?&quot;</string>
       </property>
       <property name="wordWrap">
        <bool>true</bool>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QLabel" name="ql_info">
     <property name="text">
      <string>&lt;PLACEHOLDER&gt;</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="standardButtons">
      <set>QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
